--- a/packages/rocketchat-ui/views/app/home.html
+++ b/packages/rocketchat-ui/views/app/home.html
@@ -8,6 +8,21 @@
 		</header>
 		<div class="content">
 			{{{body}}}
+			
+			<h3 class="add-room {{isActive}}">
+		{{_ "Direct_Messages"}}
+		<i class="icon-plus"></i>
+	</h3>
+	<ul>
+		{{#each rooms}}
+			{{> chatRoomItem }}
+		{{else}}
+			<p class="empty">{{_ "No_direct_messages_yet" }}</p>
+		{{/each}}
+		<button class="more more-direct-messages">{{_ "More_direct_messages"}}...</button>
+	</ul>
+
 		</div>
 	</section>
 </template>
+
